# ChangeLog for net-print/hplip-plugin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*hplip-plugin-3.11.10 (02 Nov 2011)

  02 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +hplip-plugin-3.11.10.ebuild:
  version bump
