@@ -1,9 +1,3 @@
-DIST hplip-3.11.10-plugin.run 1779110 RMD160 3b237f0205ef94d1feeb348a666a28088390730f SHA1 263372f59869d030641641ccca121e2326be7b1f SHA256 15b8b7b65c95c8d42108c328a623982d72c2d3b30c5462cad376a5b2dbe6b8f0
-DIST hplip-3.11.3a-plugin.run 1778162 RMD160 9610e4325e98f8dea4be2240aef4b8554699d2e1 SHA1 1353d17f7ff9df50ee079049094bceee0ac9ea3d SHA256 3f7d80565ca90b7f976949707fdfadbe337b5aa0fbddcd43ffe3618cdf6db66f
-DIST hplip-3.11.5-plugin.run 1778194 RMD160 70f1d9ef17ef00988453fe951cd25d490f7c3540 SHA1 dd06673e8d911311966f34ac8c31cf9ce3bd0bd9 SHA256 9b3b2885828ac79dfce9af53a6796210998b75199d72270d36d2588e989dea0f
-DIST hplip-3.12.2-plugin.run 1804971 RMD160 051e4bdbcdb7569200d145852d03db6af0bcd658 SHA1 a8842ef67b43121a571d38d416e66e2aaae30eee SHA256 6e9eca8cf95a907c8b8355ddf93c52de16dff99bd0a12578e41db85bf7ce86cb
-EBUILD hplip-plugin-3.11.10.ebuild 1485 RMD160 f643d791d0149133bafec239ee51f648aac557cb SHA1 fdbe5b307890e109785bfd1fd089834ce7766af5 SHA256 e30d6a6037e7ade821aec61aa536a995e3d0b4da42a91a603177e4c2ba9ec230
-EBUILD hplip-plugin-3.11.3a.ebuild 1504 RMD160 192bd9e633b5b6b403c7a28d6e820efb4adfc626 SHA1 a9159753e7ea929a07fdf8b2c6629d0057c8029b SHA256 00c4010c013f6868d33c5e490c47462c2403848da0a601afdcbefc250f9fd888
-EBUILD hplip-plugin-3.11.5.ebuild 1504 RMD160 192bd9e633b5b6b403c7a28d6e820efb4adfc626 SHA1 a9159753e7ea929a07fdf8b2c6629d0057c8029b SHA256 00c4010c013f6868d33c5e490c47462c2403848da0a601afdcbefc250f9fd888
-EBUILD hplip-plugin-3.12.2-r2.ebuild 1856 RMD160 fca97f9fca19d09736f07fd578a5d85d6c356d47 SHA1 1c9f237c45a0e9c58297250216a3ce0f6bd0a323 SHA256 535dfebc2104ba1baf0b7c5385d8bdb1f88d309b74c79b8cb0664185dcb2fbfe
-MISC ChangeLog 273 RMD160 217ca3d26f9b2097d92d2198d061d35655421951 SHA1 cf94f57693fa41aea2d8c327ae1e3a42489f39d5 SHA256 8cddf3cddcf7a54845475633d23323bf56ffa3230f509f4406384294118ae63d
+DIST hplip-3.12.6-plugin.run 1845394 SHA256 0beebee484e273055ae919c2cb2368b21dcd40a8269274346f0f1acf42b74d14 SHA512 d001a2c16a51023299d78da43d79d33eb4ca255218227e55466c0217392ce783896dde615184f62d2e8c2025c08eff6b70bcd102cd4dfb75137a9152c2d1d0ec WHIRLPOOL 34e0fde97789d1645c85595cc70fc8374cbc0926f45e9af8f3320600b7e1686a613da69285dd20708091b6853bf04e3eacccae0ddc3b8ad82b8358e411f625c9
+EBUILD hplip-plugin-3.12.6.ebuild 1928 SHA256 060814fd7cc21c392ee3352a3ff2d6ffafbedd46f8d5ae9fab06bab87f467f70 SHA512 dbc3dbdca7faa3345e017cdc18643b6f5c15288388f2eb09e11c05d7335f6ab4e3c17fda3a907fae2582a93a6a9fbea6929d31a3f8d2a85b6b1bcec4943f5653 WHIRLPOOL 08f9bce1da7343125b8e01f930e741ae9ad7fa1934eca2e273843490b02b3688fd81097f62f56f24e2ade1c181ffc11f168669d33f63503953fcf9ee6a76557e
+MISC ChangeLog 546 SHA256 0a24230daa573259934ec883171ce4abf5a2d531cbb4a6e07b19fa19ce18fb72 SHA512 589fef8c0b19e2978abeb88afdac38f05776fddcc8c7574f7175476ce1b7e847a932a8131a96937844e2801f647fde8d79709d6e6a6647d9ea31268e70ea432e WHIRLPOOL 4c6435fba9c5e9514895e5251317387db3bb9982c9e0323a1bf8e486a842d121258e7c85222e383cfcd62f9139dea6038b26abe55946a3b1fa2a5548ed96ed3f
