@@ -1,6 +1,14 @@
 # ChangeLog for net-print/hplip-plugin
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*hplip-plugin-3.12.6 (10 Jul 2012)
+
+  10 Jul 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -hplip-plugin-3.11.3a.ebuild, -hplip-plugin-3.11.5.ebuild,
+  -hplip-plugin-3.11.10.ebuild, -hplip-plugin-3.12.2-r2.ebuild,
+  +hplip-plugin-3.12.6.ebuild:
+  version bump
 
 *hplip-plugin-3.11.10 (02 Nov 2011)
 
